= Cerberus Changelog

== SVN

* Use lazy loading of cerberus components (publishers, vcs, builder)
* Show Cerberus home in Help

== Version 0.3.0
Fix release

* Added support of Campfire publisher
* Added changeset_url option that adds quick link to browsable chanelist view
* Added possibility to specify user_name and password for Subversion commands
* Added support of Darcs VCS

== Version 0.2.4
Features release

* Fix problem with TLS hack. Now possible to send to SSL and vanilla mailservers without modifying code.
* Added rant support (http://make.rubyforge.org) [Xavier Shay]
* Fixed escaping of code in RSS publisher [Xavier Shay]
* If we have only builder or publisher in configuration then use it. Param :type made mandatory.

== Version 0.2.3
Features release

* Added Lock files that prevent from mutiply build of the same project by several different processes
* Added multythread build for 'buildall' command. Now if one of threads froses (for example because of SVN repo is broken) then other threads would continue execution.
* Added possibility to send to gmail host using GMailer library
* Added --force oprion that would be helpful if you want to rebuild project even if there are no changes in VSC.
  Use 'cerberus build --force my_project'
* Added site for Cerberus project. http://cerberus.rubyforge.org/
* From now all builds logs their build data. It would be switched off by :log/:enable => false in configuration file

== Version 0.2.2
Minor fix release

* Make rake executable recongnition process less verbose
* Refactored builder mecahnism in Cerberus. Now adding new Builder possible in much more easiest way
* Added Maven2 builder
* Add possibility to specify Builder type on application creation by BUILDER=xxx option
* Process correctly folders locked by SVN

== Version 0.2.1
Minor fix release

* publisher -> active flag now not mandatory. Use 'mail' publisher as active if not set any

== Version 0.2.0