@@ -4,6 +4,7 @@
 
 * Use lazy loading of cerberus components (publishers, vcs, builder)
 * Show Cerberus home in Help
+* Added 'list' command that shows names of all *active* projects
 
 == Version 0.3.0
 Fix release
